data/derived/comb/progs/unify/prog2044.ml.out
Characters 87-89:
  wwhile(f' , b);;
         ^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
